--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "scripts": {
     "dev": "netlify-lambda serve functions",
     "build": "netlify-lambda build functions"
+  },
+  "dependencies": {
+    "axios": "^1.6.8"
   }
 }
