test: react-dropzone

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-player": "^2.16.0",
     "sass": "^1.76.0"
   },
